data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_526.wast
;; 7. **Test Unreachable Code Following `nop`**:    Use a `nop` instruction followed by `unreachable` to test if the unreachable code detection is consistent across implementations.

(assert_invalid
  (module (func (nop) (unreachable)))
  "unreachable code"
)